--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html>
   <head>
     <title>Welcome</title>
-    <link rel="stylesheet" href="main.css" />
+    <!-- <link rel="stylesheet" href="selector.css" /> -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
-      <h1>HTML Basic</h1>
-      <h1>HTML Basic</h1>
-      <h1>HTML Basic</h1>
-      <h1>HTML Basic</h1>
-      <h1>HTML Basic</h1>
-      <h1>HTML Basic</h1>
+    <!-- Selector -->
+    <!-- <div>
+      <h1 class="one">HTML Basic</h1>
+      <h1 class="one">HTML Basic</h1>
+      <h1 class="one" id="rollone">HTML Basic</h1>
+      <h1 class="two">HTML Basic</h1>
+      <h1 class="two">HTML Basic</h1>
+      <h1 class="two">HTML Basic</h1>
 
       <p>By: Masud Rana</p>
-      <p>
+      <p class="one">
         Lorem ipsum <span>dolor</span> sit <u>amet</u>, consectetur adipisicing
         elit. Illum repe em consectetur sapiente in ad, commodi error ipsam est
         temporibus ipsum sequi esse itaque quibusdam officiis impedit odio? Est,
         veritatis.
       </p>
-      <!-- Block Element, Inline Element -->
+    </div> -->
+
+    <!-- Basic CSS -->
+    <div>
+      <div id="inner"></div>
     </div>
   </body>
 </html>
